--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "lucide-react": "^0.546.0",
     "next": "15.5.6",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "use-debounce": "^10.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
