--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-dialog": "^1.1.15",
+    "google-libphonenumber": "^3.2.43",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
+    "react-international-phone": "^4.6.0",
     "use-debounce": "^10.0.6",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/google-libphonenumber": "^7.4.30",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
