--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.78.0",
+    "browser-image-compression": "^2.0.2",
     "google-libphonenumber": "^3.2.43",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
@@ -21,6 +24,7 @@
     "react-hook-form": "^7.65.0",
     "react-international-phone": "^4.6.0",
     "use-debounce": "^10.0.6",
+    "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
