--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
+    "react-hot-toast": "^2.6.0",
     "react-international-phone": "^4.6.0",
     "use-debounce": "^10.0.6",
     "uuid": "^13.0.0",
